dataset1235/2025-2/2868285114/users/2053306537/executions/4269873056_1559799913.log
== RUN (2025-08-26 22:22:58)
-- CODE: 
numero = input(2)
quadrado =  **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:12:37)
-- CODE: 
numero = input(4)
quadrado = 2 * 2
print(quadrado)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
44
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
44
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
44
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
44
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
44
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:31:08)
-- CODE: 
numero = int(input())
quadrado =  **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:03:44)
-- CODE: 
numero = input(2)
quadrado = numero ** 2
print(4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:28:47)
-- CODE: 
numero = int(input(2))
quadrado =  **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:28:24)
-- CODE: 
numero = int(input(2))
quadrado =  ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:28:21)
-- CODE: 
numero = int(input(2))
quadrado =  ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:23:11)
-- CODE: 
numero = input(2)
quadrado =  ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:29:48)
-- CODE: 
numero = int(input())
quadrado =  ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:29:50)
-- CODE: 
numero = int(input())
quadrado =  ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  ** 2
                ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:28:45)
-- CODE: 
numero = int(input(2))
quadrado =  **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 22:29:38)
-- CODE: 
numero = int(input())
quadrado =  **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:29:36)
-- CODE: 
numero = int(input())
quadrado =  **2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 2
    quadrado =  **2
                ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 22:12:33)
-- CODE: 
numero = input(4)
quadrado = 2 * 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
44
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
44
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
44
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
44
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
44
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
